Provide a wrapper over IndexedDB, which reporting/communication can use to efficiently store binary data.

--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -49,6 +49,7 @@
     "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.0",
     "hybrids": "^8.1.13",
+    "idb": "^7.1.1",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
   },
