--- a/extension-manifest-v3/.eslintrc
+++ b/extension-manifest-v3/.eslintrc
@@ -4,7 +4,7 @@
     "browser": true,
     "node": true,
     "serviceworker": true,
-    "webextensions": true 
+    "webextensions": true
   },
   "extends": [
     "eslint:recommended",
@@ -12,5 +12,8 @@
   ],
   "parserOptions": {
     "sourceType": "module"
+  },
+  "globals": {
+    "__PLATFORM__": "readonly"
   }
 }
