--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -10,10 +10,10 @@
   "license": "MPL-2.0",
   "scripts": {
     "start": "web-ext run --target=chromium",
-    "build.dev": "webpack --mode development --progress",
-    "build.prod": "webpack --mode production --progress",
+    "build.dev": "webpack --mode development --progress && npm run licenses",
+    "build.prod": "webpack --mode production --progress && npm run licenses",
+    "build.watch": "webpack --mode development --progress --watch & npm run licenses",
     "upload-sentry": "webpack --mode production --progress --devtool source-maps && ./tools/upload-sentry.sh",
-    "build.watch": "webpack --mode development --progress --watch",
     "licenses": "node ../tools/licenses.js",
     "test": "jest",
     "test.watch": "jest --watch",
@@ -24,7 +24,7 @@
     "docs": "jsdoc -c jsdoc.json -d docs -r",
     "leet": "node ./tools/leet/leet-en.js",
     "leet.reset": "node ./tools/leet/leet-reset.js",
-    "postinstall": "vendor-copy && npm run licenses",
+    "postinstall": "vendor-copy",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./app ./_locales/en/messages.json",
