--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,17 +4,12 @@
   "version": "10.0.0",
   "type": "module",
   "scripts": {
-    "download-cosmetics": "node scripts/download-cosmetics.js",
-    "download-dnr-lists": "node scripts/download-dnr-lists.js",
     "postinstall": "npm run download-cosmetics && npm run download-dnr-lists",
     "build": "node scripts/build.js",
-    "build.chromium": "npm run build -- --target chromium",
-    "build.safari": "npm run build -- --target safari",
-    "dev": "npm run build.chromium -- --watch",
-    "dev.safari": "npm run build.safari -- --watch",
-    "release": "web-ext build",
-    "start": "web-ext run --target=chromium --no-reload",
-    "lint": "eslint src/",
+    "start": "npm run build -- --watch",
+    "download-cosmetics": "node scripts/download-cosmetics.js",
+    "download-dnr-lists": "node scripts/download-dnr-lists.js",
+    "lint": "eslint src/", 
     "test": "npm run lint",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./src/_locales/en/messages.json",
@@ -54,6 +49,7 @@
     "tldts-experimental": "^5.7.66"
   },
   "webExt": {
+    "noReload": true,
     "sourceDir": "./dist/"
   }
 }
