--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -18,6 +18,7 @@
       "48": "assets/images/icon48.png",
       "128": "assets/images/icon128.png"
     },
+    "default_area": "navbar",
     "default_title": "Ghostery",
     "default_popup": "pages/panel/index.html"
   },
