--- a/extension-manifest-v3/jsconfig.json
+++ b/extension-manifest-v3/jsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": { 
+    "baseUrl": "src",
+    "paths": {
       "/*": ["./*"]
     }
   }
