--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,11 +4,12 @@
   "version": "10.0.2",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-cosmetics && npm run download-dnr-lists",
+    "postinstall": "npm run download-cosmetics && npm run download-dnr-lists && npm run download-trackerdb",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "download-cosmetics": "node scripts/download-cosmetics.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
+    "download-trackerdb": "node scripts/download-trackerdb.js",
     "lint": "eslint src/",
     "test": "npm run lint",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
@@ -36,12 +37,13 @@
     "web-ext": "^7.3.1"
   },
   "dependencies": {
-    "@cliqz/adblocker": "^1.23.7",
+    "@cliqz/adblocker": "^1.26.0",
     "@cliqz/adblocker-webextension-cosmetics": "^1.22.7",
     "@duckduckgo/autoconsent": "^4.0.0",
     "@ghostery/libs": "file:../libs",
     "@ghostery/ui": "file:../ui",
     "@github/relative-time-element": "^4.1.5",
+    "@rollup/pluginutils": "^5.0.2",
     "@whotracksme/webextension-packages": "^2.1.5",
     "hybrids": "^8.1.13",
     "idb": "^7.1.1",
