--- a/extension-manifest-v3/.gitignore
+++ b/extension-manifest-v3/.gitignore
@@ -4,8 +4,7 @@ dist
 src/_metadata
 src/rule_resources
 src/assets/trackerdb.engine.bytes
-src/assets/adblocker_engines/*
-!src/assets/adblocker_engines/.gitkeep
+src/adblocker_engines
 
 web-ext-artifacts/
 
