--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,10 +4,10 @@
   "version": "10.0.4",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-rules && npm run download-dnr-lists && npm run download-trackerdb",
+    "postinstall": "npm run download-engines && npm run download-dnr-lists && npm run download-trackerdb",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
-    "download-rules": "node scripts/download-rules.js",
+    "download-engines": "node scripts/download-engines.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
     "download-trackerdb": "node scripts/download-trackerdb.js",
     "lint": "eslint src/",
