--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MPL-2.0",
   "scripts": {
-    "postinstall": "vendor-copy && npm run licenses",
+    "postinstall": "vendor-copy && npm run licenses && npm run download-trackerdb",
     "start": "web-ext run --target=chromium",
     "build.dev": "webpack --mode development --progress",
     "build.prod": "webpack --mode production --progress",
@@ -25,6 +25,7 @@
     "docs": "jsdoc -c jsdoc.json -d docs -r",
     "leet": "node ./tools/leet/leet-en.js",
     "leet.reset": "node ./tools/leet/leet-reset.js",
+    "download-trackerdb": "node --input-type=module ./tools/download-trackerdb.js",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./app ./_locales/en/messages.json",
@@ -40,6 +41,7 @@
   },
   "homepage": "https://github.com/ghostery/ghostery-extension#readme",
   "dependencies": {
+    "@cliqz/adblocker": "^1.26.3",
     "@cliqz/url-parser": "^1.1.4",
     "@duckduckgo/autoconsent": "^4.0.0",
     "@ghostery/libs": "^1.0.0",
