--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -73,7 +73,8 @@
     "redux-thunk": "^2.4.2",
     "tldts-experimental": "^5.7.102",
     "underscore": "^1.13.6",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "webextension-polyfill": "^0.10.0"
   },
   "devDependencies": {
     "clean-webpack-plugin": "^3.0.0",
