--- a/ui/package.json
+++ b/ui/package.json
@@ -29,5 +29,8 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.6.2"
+  },
+  "dependencies": {
+    "hybrids": "^8.1.14"
   }
 }
