--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -516,6 +516,7 @@
   "web_accessible_resources": [
     {
       "resources": [
+        "content_scripts/whotracksme/ghostery-whotracksme.js",
         "pages/autoconsent/index.html",
         "pages/onboarding/index.html"
       ],
