--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -46,6 +46,7 @@
     "@whotracksme/webextension-packages": "^2.1.5",
     "hybrids": "^8.1.14",
     "idb": "^7.1.1",
+    "jwt-decode": "^3.1.2",
     "lodash-es": "^4.17.21",
     "tldts-experimental": "^5.7.66"
   },
