POC: Contextual Onboarding

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -106,6 +106,14 @@
       "all_frames": true
     },
     {
+      "matches": ["*://*/*"],
+      "run_at": "document_start",
+      "js": [
+        "content_scripts/onboarding.js"
+      ],
+      "all_frames": true
+    },
+    {
       "matches": [
         "*://*.google.com/*",
         "*://*.google.ad/*",
@@ -518,6 +526,7 @@
       "resources": [
         "content_scripts/whotracksme/ghostery-whotracksme.js",
         "pages/autoconsent/index.html",
+        "pages/contextual-onboarding/index.html",
         "pages/onboarding/index.html"
       ],
       "all_frames": true,
