--- a/ui/package.json
+++ b/ui/package.json
@@ -7,6 +7,7 @@
     "./autoconsent": "./src/modules/autoconsent/index.js",
     "./autoconsent/iframe": "./src/modules/autoconsent/iframe.js",
     "./onboarding": "./src/modules/onboarding/index.js",
+    "./onboarding/iframe": "./src/modules/onboarding/iframe.js",
     "./pages": "./src/modules/pages/index.js",
     "./panel": "./src/modules/panel/index.js",
     "./settings": "./src/modules/settings/index.js",
