--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,12 +4,11 @@
   "version": "10.0.4",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-cosmetics && npm run download-dnr-lists && npm run download-trackerdb",
+    "postinstall": "npm run download-engines && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
-    "download-cosmetics": "node scripts/download-cosmetics.js",
+    "download-engines": "node scripts/download-engines.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
-    "download-trackerdb": "node scripts/download-trackerdb.js",
     "lint": "eslint src/",
     "test": "npm run lint",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
