--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -5,6 +5,23 @@
   "short_name": "Ghostery",
   "default_locale": "en",
   "description": "Block Ads, Trackers and Annoyances",
+  "permissions": [
+    "alarms",
+    "cookies",
+    "declarativeNetRequest",
+    "declarativeNetRequestFeedback",
+    "webNavigation",
+    "storage",
+    "scripting",
+    "tabs",
+    "webRequest"
+  ],
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*",
+    "ws://*/*",
+    "wss://*/*"
+  ],
   "icons": {
     "16": "assets/images/icon16.png",
     "48": "assets/images/icon48.png",
@@ -25,22 +42,6 @@
     "page": "pages/settings/index.html",
     "open_in_tab": true
   },
-  "permissions": [
-    "webNavigation",
-    "cookies",
-    "tabs",
-    "alarms",
-    "storage",
-    "scripting",
-    "declarativeNetRequest",
-    "declarativeNetRequestFeedback"
-  ],
-  "host_permissions": [
-    "http://*/*",
-    "https://*/*",
-    "ws://*/*",
-    "wss://*/*"
-  ],
   "background": {
     "page": "background/index.html",
     "persistent": false
