--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -472,5 +472,10 @@
     "pages/trackers-preview/index.html",
     "pages/onboarding/index.html",
     "pages/autoconsent/index.html"
-  ]
+  ],
+  "browser_specific_settings": {
+		"gecko": {
+			"id": "firefox@ghostery.com"
+		}
+	}
 }
