Clean up permissions

--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -13,8 +13,7 @@
     "webNavigation",
     "storage",
     "scripting",
-    "tabs",
-    "webRequest"
+    "tabs"
   ],
   "host_permissions": [
     "http://*/*",
