--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,11 +4,11 @@
   "version": "10.0.4",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-engines && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "download-engines": "node scripts/download-engines.js",
     "download-dnr-lists": "node scripts/download-dnr-lists.js",
+    "licenses": "node ../tools/licenses.js",
     "lint": "eslint src/",
     "test": "npm run lint",
     "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
@@ -31,7 +31,6 @@
     "prettier": "^2.6.1",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
-    "vendor-copy": "^3.0.1",
     "vite": "^4.0.2",
     "web-ext": "^7.3.1"
   },
