--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -82,6 +82,13 @@
       "all_frames": true
     },
     {
+      "matches": ["*://*/*"],
+      "run_at": "document_start",
+      "js": [
+        "content_scripts/iframe.js"
+      ]
+    },
+    {
       "matches": [
         "*://*.google.com/*",
         "*://*.google.ad/*",
@@ -494,7 +501,8 @@
       "resources": [
         "content_scripts/whotracksme/ghostery-whotracksme.js",
         "pages/autoconsent/index.html",
-        "pages/onboarding/index.html"
+        "pages/onboarding/index.html",
+        "pages/onboarding/iframe.html"
       ],
       "all_frames": true,
       "matches": [
