--- a/ui/package.json
+++ b/ui/package.json
@@ -5,7 +5,6 @@
   "description": "",
   "exports": {
     "./autoconsent": "./src/modules/autoconsent/index.js",
-    "./autoconsent/iframe": "./src/modules/autoconsent/iframe.js",
     "./onboarding": "./src/modules/onboarding/index.js",
     "./pages": "./src/modules/pages/index.js",
     "./panel": "./src/modules/panel/index.js",
@@ -13,7 +12,8 @@
     "./trackers-preview": "./src/modules/trackers-preview/index.js",
     "./categories": "./src/utils/categories.js",
     "./labels": "./src/utils/labels.js",
-    "./wheel": "./src/utils/wheel.js"
+    "./wheel": "./src/utils/wheel.js",
+    "./iframe": "./src/utils/iframe.js"
   },
   "scripts": {
     "lint": "eslint ./src"
