--- a/extension-manifest-v3/src/manifest.firefox.json
+++ b/extension-manifest-v3/src/manifest.firefox.json
@@ -477,8 +477,9 @@
   "web_accessible_resources": [
     "content_scripts/whotracksme/ghostery-whotracksme.js",
     "pages/trackers-preview/index.html",
+    "pages/autoconsent/index.html",
     "pages/onboarding/index.html",
-    "pages/autoconsent/index.html"
+    "pages/onboarding/iframe.html"
   ],
   "browser_specific_settings": {
 		"gecko": {
