--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MPL-2.0",
   "scripts": {
+    "postinstall": "npm run licenses",
     "start": "web-ext run --target=chromium",
     "build.dev": "webpack --mode development --progress",
     "build.prod": "webpack --mode production --progress",
@@ -41,8 +42,8 @@
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
     "@duckduckgo/autoconsent": "^4.0.0",
-    "@ghostery/libs": "file:../libs",
-    "@ghostery/ui": "file:../ui",
+    "@ghostery/libs": "^1.0.0",
+    "@ghostery/ui": "^0.3.3",
     "@sentry/browser": "7.1.1",
     "@whotracksme/webextension-packages": "^2.1.5",
     "classnames": "^2.3.2",
