--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,6 +4,7 @@
   "version": "10.0.7",
   "type": "module",
   "scripts": {
+    "postinstall": "npm run download-engines && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "download-engines": "node scripts/download-engines.js",
@@ -37,8 +38,8 @@
     "@cliqz/adblocker": "^1.26.2",
     "@cliqz/adblocker-webextension-cosmetics": "^1.22.7",
     "@duckduckgo/autoconsent": "^4.0.0",
-    "@ghostery/libs": "file:../libs",
-    "@ghostery/ui": "file:../ui",
+    "@ghostery/libs": "^1.0.0",
+    "@ghostery/ui": "^0.3.3",
     "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.5",
     "hybrids": "^8.1.15",
