--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -9,7 +9,7 @@
   },
   "license": "MPL-2.0",
   "scripts": {
-    "postinstall": "npm run licenses",
+    "postinstall": "vendor-copy && npm run licenses",
     "start": "web-ext run --target=chromium",
     "build.dev": "webpack --mode development --progress",
     "build.prod": "webpack --mode production --progress",
@@ -105,9 +105,16 @@
     "tty-browserify": "^0.0.1",
     "underscore-template-loader": "^1.2.0",
     "url-loader": "^4.1.1",
+    "vendor-copy": "^3.0.1",
     "web-ext": "^7.4.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-shell-plugin-next": "^2.3.1"
-  }
+  },
+  "vendorCopy": [
+    {
+      "from": "../node_modules/ghostery-common/build/gbe/assets",
+      "to": "./common"
+    }
+  ]
 }
