--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -9,6 +9,7 @@
   },
   "license": "MPL-2.0",
   "scripts": {
+    "postinstall": "vendor-copy && npm run licenses",
     "start": "web-ext run --target=chromium",
     "build.dev": "webpack --mode development --progress",
     "build.prod": "webpack --mode production --progress",
@@ -41,8 +42,8 @@
   "dependencies": {
     "@cliqz/url-parser": "^1.1.4",
     "@duckduckgo/autoconsent": "^4.0.0",
-    "@ghostery/libs": "file:../libs",
-    "@ghostery/ui": "file:../ui",
+    "@ghostery/libs": "^1.0.0",
+    "@ghostery/ui": "^0.3.3",
     "@sentry/browser": "7.1.1",
     "@whotracksme/webextension-packages": "^2.1.5",
     "classnames": "^2.3.2",
@@ -50,7 +51,7 @@
     "foundation-sites": "^6.6.2",
     "ghostery-common": "^1.3.2",
     "history": "^4.10.1",
-    "hybrids": "^8.1.14",
+    "hybrids": "^8.1.15",
     "linkedom": "^0.14.21",
     "moment": "^2.29.1",
     "prop-types": "^15.6.2",
@@ -104,9 +105,16 @@
     "tty-browserify": "^0.0.1",
     "underscore-template-loader": "^1.2.0",
     "url-loader": "^4.1.1",
+    "vendor-copy": "^3.0.1",
     "web-ext": "^7.4.0",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-shell-plugin-next": "^2.3.1"
-  }
+  },
+  "vendorCopy": [
+    {
+      "from": "../node_modules/ghostery-common/build/gbe/assets",
+      "to": "./common"
+    }
+  ]
 }
