--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@ghostery/extension-manifest-v3",
   "private": true,
-  "version": "10.0.6",
+  "version": "10.0.7",
   "type": "module",
   "scripts": {
+    "postinstall": "npm run download-engines && npm run download-dnr-lists",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "download-engines": "node scripts/download-engines.js",
@@ -29,7 +30,6 @@
     "eslint-plugin-prettier": "^4.0.0",
     "node-fetch": "^3.2.3",
     "prettier": "^2.6.1",
-    "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "vite": "^4.0.2",
     "web-ext": "^7.3.1"
@@ -38,11 +38,11 @@
     "@cliqz/adblocker": "^1.26.2",
     "@cliqz/adblocker-webextension-cosmetics": "^1.22.7",
     "@duckduckgo/autoconsent": "^4.0.0",
-    "@ghostery/libs": "file:../libs",
-    "@ghostery/ui": "file:../ui",
+    "@ghostery/libs": "^1.0.0",
+    "@ghostery/ui": "^0.3.3",
     "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.5",
-    "hybrids": "^8.1.14",
+    "hybrids": "^8.1.15",
     "idb": "^7.1.1",
     "jwt-decode": "^3.1.2",
     "lodash-es": "^4.17.21",
