--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -51,17 +51,17 @@
       {
         "id": "ads",
         "enabled": false,
-        "path": "rule_resources/dnr-ads-network.json"
+        "path": "rule_resources/dnr-ads.json"
       },
       {
         "id": "tracking",
         "enabled": false,
-        "path": "rule_resources/dnr-tracking-network.json"
+        "path": "rule_resources/dnr-tracking.json"
       },
       {
         "id": "annoyances",
         "enabled": false,
-        "path": "rule_resources/dnr-annoyances-network.json"
+        "path": "rule_resources/dnr-annoyances.json"
       }
     ]
   },
