Add more restrictions

--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -9,6 +9,7 @@
     "alarms",
     "cookies",
     "declarativeNetRequest",
+    "declarativeNetRequestWithHostAccess",
     "declarativeNetRequestFeedback",
     "webNavigation",
     "storage",
