--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -509,5 +509,10 @@
     "pages/onboarding/index.html",
     "pages/onboarding/iframe.html"
   ],
-  "content_security_policy" : {}
+  "content_security_policy" : {},
+  "browser_specific_settings": {
+    "safari": {
+      "strict_min_version": "15.4"
+    }
+  }
 }
