--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -41,6 +41,7 @@
     "@ghostery/ui": "^0.3.3",
     "@github/relative-time-element": "^4.1.5",
     "@whotracksme/webextension-packages": "^2.1.5",
+    "hybrids": "^8.2.0",
     "idb": "^7.1.1",
     "jwt-decode": "^3.1.2",
     "tldts-experimental": "^5.7.66"
