--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -14,7 +14,7 @@
     "build.dev": "webpack --mode development --progress",
     "build.prod": "webpack --mode production --progress",
     "build.watch": "webpack --mode development --progress --watch",
-    "upload-sentry": "webpack --mode production --progress --devtool source-maps && ./tools/upload-sentry.sh",
+    "upload-sentry": "./tools/upload-sentry.sh",
     "licenses": "node ../tools/licenses.js",
     "test": "jest",
     "test.watch": "jest --watch",
