--- a/extension-manifest-v2/manifest.json
+++ b/extension-manifest-v2/manifest.json
@@ -295,6 +295,7 @@
 	"web_accessible_resources": [
 		"app/images/*",
 		"app/templates/trackers-preview.html",
-		"app/templates/autoconsent.html"
+		"app/templates/autoconsent.html",
+		"app/templates/renew.html"
 	]
 }
