MV3: Anti-tracking
* Reorganize reporting
* wireup content script
* Download bloom filter
* Dynamic browser info
* AntiTracking respectets paused domains and settings
* Basic feedback

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -89,6 +89,13 @@
       ]
     },
     {
+      "matches": ["*://*/*"],
+      "run_at": "document_start",
+      "js": [
+        "content_scripts/whotracksme/reporting.js"
+      ]
+    },
+    {
       "matches": [
         "*://*.google.com/*",
         "*://*.google.ad/*",
