--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,10 +4,11 @@
   "version": "10.0.14",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-engines",
+    "postinstall": "npm run download-engines && npm run download-whotracksme-bloomfilter",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "download-engines": "node scripts/download-engines/index.js",
+    "download-whotracksme-bloomfilter": "node scripts/download-whotracksme-bloomfilter.js",
     "licenses": "node ../tools/licenses.js",
     "lint": "eslint src/",
     "test": "npm run lint",
