--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -42,7 +42,8 @@
     "open_in_tab": true
   },
   "background": {
-    "page": "background/index.html",
+    "scripts": ["background/index.js"],
+    "type": "module",
     "persistent": false
   },
   "declarative_net_request" : {
