Fix startup background (can't use ES modules)

--- a/extension-manifest-v3/src/manifest.safari.json
+++ b/extension-manifest-v3/src/manifest.safari.json
@@ -42,8 +42,7 @@
     "open_in_tab": true
   },
   "background": {
-    "scripts": ["background/index.js"],
-    "type": "module",
+    "page": "background/index.html",
     "persistent": false
   },
   "declarative_net_request" : {
