--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -4,10 +4,11 @@
   "version": "10.1.0",
   "type": "module",
   "scripts": {
-    "postinstall": "npm run download-engines",
+    "postinstall": "npm run download-engines && npm run download-whotracksme-bloomfilter",
     "build": "node scripts/build.js",
     "start": "npm run build -- --watch",
     "download-engines": "node scripts/download-engines/index.js",
+    "download-whotracksme-bloomfilter": "node scripts/download-whotracksme-bloomfilter.js",
     "licenses": "node ../tools/licenses.js",
     "lint": "eslint src/",
     "test": "npm run lint",
@@ -41,7 +42,7 @@
     "@ghostery/libs": "^1.0.0",
     "@ghostery/ui": "^0.3.3",
     "@github/relative-time-element": "^4.1.5",
-    "@whotracksme/webextension-packages": "^2.1.7",
+    "@whotracksme/webextension-packages": "^3.0.2",
     "hybrids": "^8.2.2",
     "idb": "^7.1.1",
     "jwt-decode": "^3.1.2",
