Move UI to packages

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   },
   "workspaces": [
     "packages/libs",
-    "ui",
+    "packages/ui",
     "extension-manifest-v3",
     "extension-manifest-v2"
   ],
