--- a/.github/workflows/test-ui.yml
+++ b/.github/workflows/test-ui.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ui
+        working-directory: packages/ui
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
