--- a/extension-manifest-v3/package.json
+++ b/extension-manifest-v3/package.json
@@ -12,10 +12,9 @@
     "licenses": "node ../tools/licenses.js",
     "lint": "eslint src/",
     "test": "npm run lint",
-    "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./src/_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./src/_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./src ./src/_locales/en/messages.json",
-    "locales": "npm run locales.wtm && npm run locales.ui && npm run locales.src",
+    "locales": "npm run locales.ui && npm run locales.src",
     "xcode-export-locales": "rm -rf ./xcode/en.xcloc && xcodebuild -exportLocalizations -project ./xcode/Ghostery.xcodeproj -localizationPath ./xcode",
     "release": "./scripts/release.sh"
   },
@@ -26,11 +25,7 @@
   },
   "license": "MPL-2.0",
   "devDependencies": {
-    "eslint": "^8.36.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
     "node-fetch": "^3.2.3",
-    "prettier": "^2.6.1",
     "shelljs": "^0.8.5",
     "vite": "^4.0.2",
     "web-ext": "^7.6.2"
@@ -40,9 +35,10 @@
     "@cliqz/adblocker-webextension-cosmetics": "^1.26.6",
     "@duckduckgo/autoconsent": "^4.3.3",
     "@ghostery/libs": "^1.0.0",
-    "@ghostery/ui": "^0.3.3",
+    "@ghostery/trackers-preview": "^1.0.0",
+    "@ghostery/ui": "^1.0.0",
     "@github/relative-time-element": "^4.1.5",
-    "@whotracksme/webextension-packages": "^3.0.2",
+    "@whotracksme/webextension-packages": "^4.0.0",
     "hybrids": "^8.2.2",
     "idb": "^7.1.1",
     "jwt-decode": "^3.1.2",
