--- a/extension-manifest-v2/package.json
+++ b/extension-manifest-v2/package.json
@@ -25,10 +25,9 @@
     "leet": "node ./tools/leet/leet-en.js",
     "leet.reset": "node ./tools/leet/leet-reset.js",
     "download-trackerdb": "node --input-type=module ./tools/download-trackerdb.js",
-    "locales.wtm": "hybrids extract -c --format=chrome.i18n ../node_modules/@whotracksme/webextension-packages/packages ./_locales/en/messages.json",
     "locales.ui": "hybrids extract -c --format=chrome.i18n ../node_modules/@ghostery/ui ./_locales/en/messages.json",
     "locales.src": "hybrids extract -c --format=chrome.i18n ./app ./_locales/en/messages.json",
-    "locales": "npm run locales.wtm && npm run locales.ui && npm run locales.src"
+    "locales": "npm run locales.ui && npm run locales.src"
   },
   "repository": {
     "type": "git",
@@ -45,9 +44,10 @@
     "@cliqz/url-parser": "^1.1.5",
     "@duckduckgo/autoconsent": "^4.3.3",
     "@ghostery/libs": "^1.0.0",
-    "@ghostery/ui": "^0.3.3",
+    "@ghostery/trackers-preview": "^1.0.0",
+    "@ghostery/ui": "^1.0.0",
     "@sentry/browser": "7.1.1",
-    "@whotracksme/webextension-packages": "^3.0.2",
+    "@whotracksme/webextension-packages": "^4.0.0",
     "classnames": "^2.3.2",
     "d3": "^5.16.0",
     "foundation-sites": "^6.6.2",
@@ -78,7 +78,6 @@
     "enzyme-adapter-react-16": "^1.15.3",
     "esbuild-jest": "^0.5.0",
     "esbuild-loader": "^2.20.0",
-    "eslint": "^8.36.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-import-resolver-webpack": "^0.13.2",
     "eslint-plugin-import": "^2.26.0",
