CI: uses nodejs specified by .tool-versions

--- a/.github/workflows/test-extension-manifest-v2.yml
+++ b/.github/workflows/test-extension-manifest-v2.yml
@@ -14,10 +14,10 @@ jobs:
         working-directory: extension-manifest-v2
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
+          node-version-file: '.tool-versions'
           cache: 'npm'
-          node-version: '19.8.1'
           cache-dependency-path: ./package-lock.json
       - name: Install dependencies in repo root
         run: npm ci
