--- a/.github/workflows/test-packages.yml
+++ b/.github/workflows/test-packages.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
+      - uses: actions/setup-node@v3
         with:
-          node-version: '19.8.1'
+          node-version-file: '.tool-versions'
           cache: 'npm'
           cache-dependency-path: ./package-lock.json
       - name: Install dependencies in repo root
