CI: fix PR comment escaping

--- a/.github/workflows/pr-comment-artifact-url.yml
+++ b/.github/workflows/pr-comment-artifact-url.yml
@@ -42,7 +42,7 @@ jobs:
               artifacts.json)
           )
           echo -e "PR COMMENT: \n$PR_COMMENT"
-          echo "PR_COMMENT=$PR_COMMENT" >> "$GITHUB_ENV"
+          echo "PR_COMMENT=\"$PR_COMMENT\"" >> "$GITHUB_ENV"
       - name: Update Comment
         env:
           HEAD_SHA: ${{ env.HEAD_SHA }}
