Add opera notification for enabling extension on SERP

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -105,7 +105,8 @@
         "pages/trackers-preview/index.html",
         "pages/autoconsent/index.html",
         "pages/onboarding/index.html",
-        "pages/onboarding/iframe.html"
+        "pages/onboarding/iframe.html",
+        "pages/onboarding/serp.html"
       ],
       "all_frames": true,
       "matches": [
