Add opera notification for enabling extension on SERP (#1300)

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -46,8 +46,8 @@
     "service_worker": "background/index.js",
     "type": "module"
   },
-  "declarative_net_request" : {
-    "rule_resources" : [
+  "declarative_net_request": {
+    "rule_resources": [
       {
         "id": "ads",
         "enabled": false,
@@ -105,7 +105,8 @@
         "pages/trackers-preview/index.html",
         "pages/autoconsent/index.html",
         "pages/onboarding/index.html",
-        "pages/onboarding/iframe.html"
+        "pages/onboarding/iframe.html",
+        "pages/onboarding/opera-serp.html"
       ],
       "all_frames": true,
       "matches": [
@@ -113,5 +114,5 @@
       ]
     }
   ],
-  "content_security_policy" : {}
+  "content_security_policy": {}
 }
