Fix toolbar icon paused state & assets

--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -23,17 +23,13 @@
     "wss://*/*"
   ],
   "icons": {
-    "16": "assets/images/icon16.png",
-    "48": "assets/images/icon48.png",
-    "128": "assets/images/icon128.png"
+    "64": "icons/icon-64.png",
+    "128": "icons/icon-128.png"
   },
   "action": {
     "default_icon": {
-      "16": "assets/images/icon16.png",
-      "24": "assets/images/icon19.png",
-      "32": "assets/images/icon38.png",
-      "48": "assets/images/icon48.png",
-      "128": "assets/images/icon128.png"
+      "64": "icons/icon-64.png",
+      "128": "icons/icon-128.png"
     },
     "default_title": "Ghostery",
     "default_popup": "pages/panel/index.html"
