--- a/extension-manifest-v3/src/manifest.chromium.json
+++ b/extension-manifest-v3/src/manifest.chromium.json
@@ -23,13 +23,13 @@
     "wss://*/*"
   ],
   "icons": {
-    "64": "icons/icon-64.png",
-    "128": "icons/icon-128.png"
+    "64": "/icons/icon-64.png",
+    "128": "/icons/icon-128.png"
   },
   "action": {
     "default_icon": {
-      "64": "icons/icon-64.png",
-      "128": "icons/icon-128.png"
+      "64": "/icons/icon-64.png",
+      "128": "/icons/icon-128.png"
     },
     "default_title": "Ghostery",
     "default_popup": "pages/panel/index.html"
